Fixes a problem in the mobile version where an invisible container for the nav menu would block pointer events for things below it.

--- a/tutor/resources/styles/global/navbar.less
+++ b/tutor/resources/styles/global/navbar.less
@@ -78,6 +78,10 @@
   }
 
   @media screen and (max-width: (@screen-md - 1px)) {
+    .container-fluid {
+      height: @tutor-navbar-height
+    }
+
     .navbar-collapse {
       max-width: 230px;
       max-height: 350px;
